--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
                     <span id="final-avg-find" class="stat-value medium mt-auto"></span>
                 </div>
                 <div class="stat-card">
-                    <span class="stat-label">Fast / Slow</span>
+                    <span class="stat-label">Fastest / Slowest</span>
                     <div id="final-ext-find" class="stat-value small-mono mt-auto"></div>
                 </div>
             </div>
