--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
         preset: localStorage.getItem('set_shape_preset') || 'standard',
         showPossible: localStorage.getItem('set_show_possible') !== 'false', 
         showDetailedPossible: localStorage.getItem('set_show_detailed') === 'false',
-        autoShuffle: localStorage.getItem('set_auto_shuffle') !== 'true',
+        autoShuffle: localStorage.getItem('set_auto_shuffle') !== 'false',
         autoSelectThird: localStorage.getItem('set_auto_select_third') === 'false',
         preventBadShuffle: localStorage.getItem('set_prevent_bad_shuffle') === 'false',
         useFixedSeed: localStorage.getItem('set_use_fixed_seed') === 'false',
