--- a/index.html
+++ b/index.html
@@ -553,11 +553,11 @@
     let config = {
         preset: localStorage.getItem('set_shape_preset') || 'standard',
         showPossible: localStorage.getItem('set_show_possible') !== 'false', 
-        showDetailedPossible: localStorage.getItem('set_show_detailed') === 'false',
+        showDetailedPossible: localStorage.getItem('set_show_detailed') !== 'true',
         autoShuffle: localStorage.getItem('set_auto_shuffle') !== 'false',
-        autoSelectThird: localStorage.getItem('set_auto_select_third') === 'false',
-        preventBadShuffle: localStorage.getItem('set_prevent_bad_shuffle') === 'false',
-        useFixedSeed: localStorage.getItem('set_use_fixed_seed') === 'false',
+        autoSelectThird: localStorage.getItem('set_auto_select_third') !== 'true',
+        preventBadShuffle: localStorage.getItem('set_prevent_bad_shuffle') !== 'true',
+        useFixedSeed: localStorage.getItem('set_use_fixed_seed') !== 'true',
         minSetsToRecord: parseInt(localStorage.getItem('set_min_sets') || '23')
     };
 
