--- a/index.html
+++ b/index.html
@@ -516,6 +516,7 @@
             <div class="settings-row">
                 <div class="flex flex-col">
                     <span class="text-sm font-bold uppercase">Target Possible Sets</span>
+                    <span class="text-[9px] text-gray-500 font-bold uppercase leading-tight">Under development, currently breaks the game</span>
                 </div>
                 <input type="number" id="min-possible-input" class="input-mini" min="0" max="6" onchange="setMinPossible(this.value)">
             </div>
