--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@
               <span class="text-sm font-bold uppercase">Auto Select 3rd</span>
               <div id="toggle-auto-select" class="toggle-switch" onpointerdown="toggleOption('autoSelectThird')"></div>
           </div>
+          <div class="settings-row">
+              <span class="text-sm font-bold uppercase">Rotate Board 90°</span>
+              <div id="toggle-rotated" class="toggle-switch" onpointerdown="toggleOption('boardRotated')"></div>
+          </div>
 
           <div class="settings-row desktop-only mt-4">
               <span class="text-sm font-bold uppercase">Controls</span>
