--- a/index.html
+++ b/index.html
@@ -76,10 +76,6 @@
               <span class="text-sm font-bold uppercase">Show Possible</span>
               <div id="toggle-possible" class="toggle-switch" onpointerdown="toggleOption('showPossible')"></div>
           </div>
-          <div id="row-detailed" class="settings-row transition-opacity">
-              <span class="text-sm font-bold uppercase text-[12px]">Detailed Possible</span>
-              <div id="toggle-detailed" class="toggle-switch" onpointerdown="toggleOption('showDetailedPossible')"></div>
-          </div>
           <div class="settings-row">
               <span class="text-sm font-bold uppercase text-[12px]">Show Sets Per Minute</span>
               <div id="toggle-spm" class="toggle-switch" onpointerdown="toggleOption('showSPM')"></div>
@@ -179,6 +175,10 @@
             <div class="settings-row">
                 <span class="text-sm font-bold uppercase">Record min sets</span>
                 <input type="number" id="min-sets-input" class="input-mini" onchange="updateMinSets(this.value)">
+            </div>
+            <div class="settings-row">
+                <span class="text-sm font-bold uppercase">Debug mode</span>
+                <div id="toggle-debug" class="toggle-switch" onpointerdown="toggleOption('debugMode')"></div>
             </div>
         </div>
         <button onpointerdown="closeAdvancedModal()" class="btn-action !w-64 text-xl py-4 uppercase mt-8">Done</button>
