--- a/index.html
+++ b/index.html
@@ -259,9 +259,12 @@
         </div>
 
         <div class="flex flex-col gap-3 items-center w-full mt-4">
-            <div class="flex gap-2 w-64">
-                <button onpointerdown="openRecordsModal()" class="btn-action flex-grow text-xl py-4 uppercase !bg-gray-600 !shadow-[#444]">Records</button>
-                <button onpointerdown="handleShareResult()" class="share-btn">
+            <div class="flex gap-2 items-center justify-center w-64">
+                <button onpointerdown="handleRecordsButtonClick()" class="btn-action flex-1 !py-3 !text-base uppercase !bg-gray-600 !shadow-[#444]">Records</button>
+                <button id="submit-online-btn" type="button" onpointerdown="handleSubmitToOnline()" class="share-btn flex-shrink-0" title="Submit to online leaderboard" aria-label="Submit to online">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"/><line x1="2" y1="12" x2="22" y2="12"/><path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"/></svg>
+                </button>
+                <button onpointerdown="handleShareResult()" class="share-btn flex-shrink-0">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M4 12v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-8"/><polyline points="16 6 12 2 8 6"/><line x1="12" y1="2" x2="12" y2="15"/></svg>
                 </button>
             </div>
@@ -280,10 +283,32 @@
     <div id="records-modal" class="overlay">
         <div class="records-modal-inner">
             <div class="records-modal-scroll">
-                <h2 class="text-2xl font-black mb-6 text-pink-400 uppercase tracking-widest">Top Scores</h2>
+                <div class="flex items-center justify-center gap-2 w-full mb-6">
+                    <h2 class="text-2xl font-black text-pink-400 uppercase tracking-widest">Top Scores</h2>
+                    <button type="button" id="open-online-records-btn" onpointerdown="openOnlineRecordsModal()" class="p-1.5 rounded-lg text-gray-400 hover:text-pink-400 hover:bg-white/10 transition-colors" title="Online records" aria-label="Online records">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"/><line x1="2" y1="12" x2="22" y2="12"/><path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"/></svg>
+                    </button>
+                </div>
                 <div id="records-container" class="records-list"></div>
             </div>
             <button onpointerdown="closeRecordsModal()" class="btn-action records-modal-back">Back</button>
+        </div>
+    </div>
+
+    <div id="online-records-modal" class="overlay">
+        <div class="records-modal-inner">
+            <div class="records-modal-scroll">
+                <div class="flex items-center justify-between w-full mb-2 gap-2">
+                    <span class="text-gray-400 text-sm font-medium uppercase tracking-wide">Nickname</span>
+                    <div class="flex items-center gap-2">
+                        <span id="online-nickname-display" class="text-pink-400 font-bold">—</span>
+                        <button type="button" onpointerdown="openNicknamePrompt()" class="text-gray-500 hover:text-pink-400 text-xs underline underline-offset-1 transition-colors">Change</button>
+                    </div>
+                </div>
+                <h2 class="text-2xl font-black mb-6 text-pink-400 uppercase tracking-widest">Online Records</h2>
+                <div id="online-records-container" class="records-list"></div>
+            </div>
+            <button onpointerdown="closeOnlineRecordsModal()" class="btn-action records-modal-back">Back</button>
         </div>
     </div>
 </div>
@@ -293,6 +318,7 @@
 <script src="state.js"></script>
 <script src="resizer.js"></script>
 <script src="utilities.js"></script>
+<script src="online-leaderboard.js"></script>
 <script src="modal-management.js"></script>
 <script src="graphics-rendering.js"></script>
 <script src="settings.js"></script>
@@ -307,6 +333,7 @@
   updateColors();
   syncSettingsUI();
   syncGameModifiers();
+  if (typeof refreshOnlineNicknameDisplay === 'function') refreshOnlineNicknameDisplay();
   updateUI();
 </script>
 </body>
