Lock "upload online" button on any records other than current finish. Add online settings tab

--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@
           </div>
 
           <div class="settings-row">
+              <span class="text-sm font-bold uppercase">Online</span>
+              <button onpointerdown="openOnlineSettingsModal()" class="btn-action !w-32 !py-1 !text-[15px] !shadow-none !rounded-lg">Settings</button>
+          </div>
+
+          <div class="settings-row">
               <span class="text-sm font-bold uppercase">Extra</span>
               <button onpointerdown="openAdvancedModal()" class="btn-action !w-32 !py-1 !text-[15px] !shadow-none !rounded-lg">Advanced</button>
           </div>
@@ -295,16 +300,24 @@
         </div>
     </div>
 
+    <div id="online-settings-modal" class="overlay">
+        <h2 class="text-2xl font-black mb-6 text-pink-400 uppercase tracking-widest">Online</h2>
+        <div class="w-full flex flex-col items-center max-w-[320px]">
+            <div class="settings-row">
+                <span class="text-sm font-bold uppercase">Nickname</span>
+                <input type="text" id="online-settings-nickname" class="input-online" placeholder="Your nickname" maxlength="32" />
+            </div>
+            <div class="settings-row !flex-col !items-stretch !h-auto gap-2">
+                <span class="text-sm font-bold uppercase">Show records only from</span>
+                <input type="text" id="online-settings-filter" class="input-online !w-full" placeholder="nick1, nick2, … Leave empty for all." />
+            </div>
+        </div>
+        <button onpointerdown="closeOnlineSettingsModal()" class="btn-action !w-64 text-xl py-4 uppercase mt-8">Done</button>
+    </div>
+
     <div id="online-records-modal" class="overlay">
         <div class="records-modal-inner">
             <div class="records-modal-scroll">
-                <div class="flex items-center justify-between w-full mb-2 gap-2">
-                    <span class="text-gray-400 text-sm font-medium uppercase tracking-wide">Nickname</span>
-                    <div class="flex items-center gap-2">
-                        <span id="online-nickname-display" class="text-pink-400 font-bold">—</span>
-                        <button type="button" onpointerdown="openNicknamePrompt()" class="text-gray-500 hover:text-pink-400 text-xs underline underline-offset-1 transition-colors">Change</button>
-                    </div>
-                </div>
                 <h2 class="text-2xl font-black mb-6 text-pink-400 uppercase tracking-widest">Online Records</h2>
                 <div id="online-records-container" class="records-list"></div>
             </div>
@@ -333,7 +346,6 @@
   updateColors();
   syncSettingsUI();
   syncGameModifiers();
-  if (typeof refreshOnlineNicknameDisplay === 'function') refreshOnlineNicknameDisplay();
   updateUI();
 </script>
 </body>
