--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
     </div>
 
     <div class="settings-edge-container">
-        <div class="settings-btn" onpointerdown="toggleSettingsModal(true)">
-            <svg width="24" height="24" fill="currentColor" viewBox="0 0 24 24"><path d="M19.14,12.94c0.04-0.3,0.06-0.61,0.06-0.94c0-0.32-0.02-0.64-0.07-0.94l2.03-1.58c0.18-0.14,0.23-0.41,0.12-0.61 l-1.92-3.32c-0.12-0.22-0.37-0.29-0.59-0.22l-2.39,0.96c-0.5-0.38-1.03-0.7-1.62-0.94L14.4,2.81c-0.04-0.24-0.24-0.41-0.48-0.41 h-3.84c-0.24,0-0.43,0.17-0.47,0.41L9.25,5.35C8.66,5.59,8.12,5.91,7.62,6.29L5.23,5.33c-0.22-0.08-0.47,0-0.59,0.22L2.72,8.87 c-0.11,0.2-0.06,0.47,0.12,0.61l2.03,1.58C4.84,11.36,4.81,11.66,4.81,12c0,0.33,0.02,0.64,0.07,0.94l-2.03,1.58 c-0.18,0.14-0.23,0.41-0.12,0.61l1.92,3.32c0.12,0.22,0.37,0.29,0.59,0.22l2.39-0.96c0.5,0.38,1.03,0.7,1.62,0.94l0.36,2.54 c0.05,0.24,0.24,0.41,0.48,0.41h3.84c0.24,0,0.44-0.17,0.47-0.41l0.36-2.54c0.59-0.24,1.13-0.56,1.62-0.94l2.39,0.96c0.22,0.08,0.47,0,0.59-0.22l1.92-3.32c0.12-0.22,0.07-0.47-0.12-0.61L19.14,12.94z M12,15.5c-1.93,0-3.5-1.57-3.5-3.5 s1.57-3.5,3.5-3.5s3.5,1.57,3.5,3.5S13.93,15.5,12,15.5z"/></svg>
-        </div>
+        <div class="settings-btn" onpointerdown="toggleSettingsModal(true)" data-svg-icon="SETTINGS"></div>
         <div class="text-gray-300 text-sm font-medium">Sets: <span id="current-score" class="text-pink-400 font-bold">0</span></div>
         <div class="text-gray-400 text-xs">Cards: <span id="deck-count">0</span></div>
     </div>
@@ -242,9 +240,7 @@
 
     <div id="result-modal" class="overlay">
         <div id="share-content" class="flex flex-col items-center w-full">
-            <div class="more-details-btn no-export" onpointerdown="openExtraStatsModal()">
-                <svg width="20" height="20" fill="currentColor" viewBox="0 0 24 24"><path d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"/></svg>
-            </div>
+            <div class="more-details-btn no-export" onpointerdown="openExtraStatsModal()" data-svg-icon="MORE_DETAILS"></div>
             <div id="export-header" class="text-[10px] text-pink-400/50 font-black uppercase tracking-[0.2em] mb-1 export-only">Set Pro Trainer</div>
             <h2 id="result-title" class="text-4xl font-black mb-6 text-pink-400 uppercase tracking-widest">Result</h2>
             <div class="stat-grid mb-4">
@@ -283,12 +279,8 @@
         <div class="flex flex-col gap-3 items-center w-full mt-4">
             <div class="flex gap-2 items-center justify-center w-64">
                 <button onpointerdown="handleRecordsButtonClick()" class="btn-action flex-1 !py-3 !text-base uppercase !bg-gray-600 !shadow-[#444]">Records</button>
-                <button id="submit-online-btn" type="button" onpointerdown="handleSubmitToOnline()" class="share-btn flex-shrink-0" title="Submit to online leaderboard" aria-label="Submit to online">
-                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"/><line x1="2" y1="12" x2="22" y2="12"/><path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"/></svg>
-                </button>
-                <button onpointerdown="handleShareResult()" class="share-btn flex-shrink-0">
-                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M4 12v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-8"/><polyline points="16 6 12 2 8 6"/><line x1="12" y1="2" x2="12" y2="15"/></svg>
-                </button>
+                <button id="submit-online-btn" type="button" onpointerdown="handleSubmitToOnline()" class="share-btn flex-shrink-0" title="Submit to online leaderboard" aria-label="Submit to online" data-svg-icon="GLOBE"></button>
+                <button onpointerdown="handleShareResult()" class="share-btn flex-shrink-0" data-svg-icon="UPLOAD"></button>
             </div>
             <button onpointerdown="handleGameReset()" class="btn-action !w-64 text-xl py-4 uppercase">Restart</button>
         </div>
@@ -307,9 +299,7 @@
             <div class="records-modal-scroll">
                 <div class="flex items-center justify-center gap-2 w-full mb-6">
                     <h2 class="text-2xl font-black text-pink-400 uppercase tracking-widest">Top Scores</h2>
-                    <button type="button" id="open-online-records-btn" onpointerdown="openOnlineRecordsModal()" class="p-1.5 rounded-lg text-gray-400 hover:text-pink-400 hover:bg-white/10 transition-colors" title="Online records" aria-label="Online records">
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"/><line x1="2" y1="12" x2="22" y2="12"/><path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"/></svg>
-                    </button>
+                    <button type="button" id="open-online-records-btn" onpointerdown="openOnlineRecordsModal()" class="p-1.5 rounded-lg text-gray-400 hover:text-pink-400 hover:bg-white/10 transition-colors" title="Online records" aria-label="Online records" data-svg-icon="GLOBE"></button>
                 </div>
                 <div id="records-container" class="records-list"></div>
             </div>
@@ -365,6 +355,12 @@
 <script src="event-listeners.js"></script>
 <script src="timer.js"></script>
 <script>
+  (function() {
+    document.querySelectorAll('[data-svg-icon]').forEach(function(el) {
+      var key = el.getAttribute('data-svg-icon');
+      if (typeof SVG_ICONS !== 'undefined' && SVG_ICONS[key]) el.innerHTML = SVG_ICONS[key];
+    });
+  })();
   (function() {
     var boardEl = document.getElementById('board');
     if (boardEl) boardEl.style.setProperty('--shape-size-ratio', String(config.shapeSizeRatio));
